# gerador-etiqueta-expedicao

./: .gitignore  README.md  balance_communication.py  get_data.py  iniciar.bat  interface.py  label_print.py  main.py  pyproject.toml  requests_api_go.py  requirements.txt
core/: balance_communication.py  generate_labels.py  get_data.py  interface.py  requests_api_go.py
src/core/: api.py  config.py  session_manager.py
src/frontend/: interface.py  theme.qss
src/frontend/dialogs/: login_dialog.py
src/frontend/tabs/: configs_tab.py  shipping_tab.py
src/models/: schema.py
src/utils/: csv_logger.py  labels.py  printer.py
