[project]
name = "gerador-etiqueta-expedicao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.3",
    "datetime>=5.5",
    "pyserial>=3.5",
    "pyside6>=6.8.1.1",
    "qasync>=0.27.1",
    "reportlab>=4.3.1",
]
