[project]
name = "gerador-etiqueta-expedicao"
version = "2.0.0"
description = "Project to generate label for shipment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.3",
    "datetime>=5.5",
    "logging>=0.4.9.6",
    "pydantic>=2.12.5",
    "pyserial>=3.5",
    "pyside6>=6.8.1.1",
    "python-barcode>=0.16.1",
    "qasync>=0.27.1",
    "qrcode>=8.2",
    "reportlab>=4.3.1",
    "selenium>=4.31.0",
]
